implement compare logic wihtout testing